# base-connector

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  README.md  build.rs  docker-compose.test.yml  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
build_templates/: action_routing.rs.template  actions_mod.rs.template  embedded_schemas.rs.template  trigger_routing.rs.template  triggers_mod.rs.template
build_utils/: action_router.rs  error.rs  mod.rs  mod_generator.rs  schema_collector.rs  schema_embedder.rs  trigger_router.rs
scripts/: test-setup.sh
spec/: spec_helper.rb  test_helper.rb
src/: client.rs  lib.rs
src/actions/: mod.rs  utils.rs
src/triggers/: mod.rs
wit/: standout-app.wit
