[package]
name = "base-connector"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
wit-bindgen = "0.42"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
urlencoding = "2.1"

[build-dependencies]
serde_json = "1.0"
